<resources>
    <string name="app_name">MyFirstKeyboard</string>

    <string name="my_first_keyboard_service">MyFirstKeyboardService</string>
    <string name="my_first_keyboard_settings">MyFirstKeyboardSettings</string>

    <string name="key_label_1">1</string>
    <string name="key_label_2">2</string>
    <string name="key_label_3">3</string>
    <string name="key_label_4">4</string>
    <string name="key_label_5">5</string>
    <string name="key_label_6">6</string>
    <string name="key_label_7">7</string>
    <string name="key_label_8">8</string>
    <string name="key_label_9">9</string>
    <string name="key_label_delete">删除</string>
    <string name="key_label_0">0</string>
    <string name="key_label_confirm">确认</string>

    <string name="key_label_q">q</string>
    <string name="key_label_w">w</string>
    <string name="key_label_e">e</string>
    <string name="key_label_r">r</string>
    <string name="key_label_t">t</string>
    <string name="key_label_y">y</string>
    <string name="key_label_u">u</string>
    <string name="key_label_i">i</string>
    <string name="key_label_o">o</string>
    <string name="key_label_p">p</string>

    <string name="key_label_a">a</string>
    <string name="key_label_s">s</string>
    <string name="key_label_d">d</string>
    <string name="key_label_f">f</string>
    <string name="key_label_g">g</string>
    <string name="key_label_h">h</string>
    <string name="key_label_j">j</string>
    <string name="key_label_k">k</string>
    <string name="key_label_l">l</string>

    <string name="key_label_z">z</string>
    <string name="key_label_x">x</string>
    <string name="key_label_c">c</string>
    <string name="key_label_v">v</string>
    <string name="key_label_b">b</string>
    <string name="key_label_n">n</string>
    <string name="key_label_m">m</string>

</resources>
